feat: Implement new UI with Material-UI and update branding

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "browser-image-compression": "^2.0.2",
     "firebase": "^9.22.2",
