--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,15 @@
 {
   "short_name": "SmartCampus",
   "name": "Smart Campus Platform",
+  "icons": [
+    {
+      "src": "logo.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/png"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#ffffff",
   "theme_color": "#000000",
-  "icons": []
+  "background_color": "#ffffff"
 }
