--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@mui/material": "^7.3.6",
     "browser-image-compression": "^2.0.2",
     "firebase": "^9.22.2",
+    "framer-motion": "^12.23.26",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1"
   },
